# Duck-Demo-Game

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/: heightMap.csv  normalMap.csv
include/controllers/: DuckBotController.hpp  DuckPlayerController.hpp  EntityController.hpp
include/entities/: Camera.hpp  Duck.hpp  Entity.hpp  Transform.hpp  Wind.hpp  WorldLight.hpp
include/managers/: CollisionManager.hpp  GameManager.hpp  InputManager.hpp
include/states/: GameState.hpp  GameStates.hpp  PlayingState.hpp
include/terrain/: TerrainGenerator.hpp  TerrainV2.hpp
shaders/terrain/: TerrainV2.frag  TerrainV2.vert
src/: main.cpp
src/controllers/: DuckBotController.cpp  DuckPlayerController.cpp  EntityController.cpp
src/entities/: Camera.cpp  Duck.cpp  Entity.cpp  Transform.cpp  Wind.cpp  WorldLight.cpp
src/managers/: CollisionManager.cpp  GameManager.cpp  InputManager.cpp
src/states/: PlayingState.cpp
src/terrain/: TerrainGenerator.cpp  TerrainV2.cpp
